# audit

./: .gitignore  .sample.env  .tmpl.yaml  Cargo.toml  Dockerfile  README.md  commits.md  flake.nix  gel.toml  leptosfmt.toml  package.json  pnpm-lock.yaml  prettier.config.mjs  rustfmt.toml  session.yaml  taplo.toml
audit/: Cargo.toml
audit/end2end/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
audit/end2end/tests/: example.spec.ts
audit/public/images/: neon-iol.avif
audit/src/: auth.rs  bounded.rs  components.rs  error.rs  fileserv.rs  lib.rs  macros.rs  mail.rs  main.rs  mock.rs  model.rs  plots.rs  query.rs  routes.rs
audit/src/components/: add_case.rs  arrow_iol.rs  md.rs  nav.rs  plot_set.rs  review.rs  signed_out.rs
audit/src/model/: biometry.rs  case.rs  cyl.rs  iol.rs  refraction.rs  sca.rs  sia.rs  surgeon.rs  target.rs  va.rs
audit/src/plots/: cartesian.rs  case.rs  polar.rs  vertex.rs
audit/src/routes/: add.rs  app.rs  error.rs  gateway.rs  landing.rs  list.rs  protected.rs  report.rs  review.rs  sign_up.rs  terms.rs
audit/src/tests/: plots.rs
audit/src/tests/common/: mod.rs
audit/style/: main.css
audit_macro/: Cargo.toml
audit_macro/src/: lib.rs
dbschema/: default.esdl  default.gel  sample_auth_setup.edgeql
dbschema/fixups/: m1gsrh4p5innhxf2tab5tqvhjf3nyikei7xs3p7gmra2rsgvmzeolq-m1favi3rvyox7zwbrkxmenllcdhne7zokdtidwh7kzyk6v3atced3q.edgeql
dbschema/migrations/: 00001-m1favi3.edgeql  00001.edgeql  00002-m1zctrz.edgeql  00002.edgeql  00003-m1avya4.edgeql  00003-m1gqnwl.edgeql  00004-m1gnnlq.edgeql  00005-m1mxgky.edgeql  00006-m1ull2b.edgeql  00007-m1uevqo.edgeql  00008-m1pu3lq.edgeql  00009-m1oxjeh.edgeql  00010-m1tae4u.edgeql  00011-m1lzu5d.edgeql  00012-m13jvet.edgeql  00013-m135ho4.edgeql  00014-m1ujgsr.edgeql  00015-m1qjs5r.edgeql  00016-m1ya5ct.edgeql  00017-m1ac6la.edgeql  00018-m1sq2gw.edgeql  00019-m1s65ky.edgeql  00020-m1zjpjo.edgeql  00021-m1pfh3c.edgeql  00022-m1dtsbp.edgeql  00023-m1wsvv4.edgeql  00024-m1ihonr.edgeql  00025-m1qomdx.edgeql  00026-m1mefat.edgeql  00027-m1roas7.edgeql  00028-m1mhp2r.edgeql  00029-m1nlerk.edgeql  00030-m1dczkg.edgeql  00031-m1lj2m6.edgeql  00032-m1iwjuf.edgeql  00033-m1wxy4q.edgeql  00034-m1nawft.edgeql  00035-m1gsrh4.edgeql
markdown/: landing.md
public/markdown/: landing.md
refs/: commits.txt  notes.md  powers.csv  query.esdl  token.json
src/: app.rs  auth.rs  axis.rs  biometry.rs  bounded.rs  bounds_check.rs  case.rs  check.rs  components.rs  csv.rs  cyl.rs  db.rs  distance.rs  email.rs  error.rs  error_template.rs  fileserv.rs  flatcase.rs  handler.rs  incision.rs  iol.rs  lib.rs  macros.rs  mail.rs  main.rs  mock.rs  model.rs  plots.rs  power.rs  powers.rs  query.rs  refraction.rs  refs.rs  routes.rs  sca.rs  sia.rs  state.rs  surgeon.rs  target.rs  tests.rs  (+2 more)
src/components/: add_case.rs  arrow_iol.rs  arrow_up_right_circle.rs  container.rs  hero.rs  logo.rs  md.rs  nav.rs  plot_container.rs  plot_set.rs  signed_out.rs
src/model/: biometry.rs  case.rs  cyl.rs  iol.rs  refraction.rs  sca.rs  sia.rs  surgeon.rs  target.rs  va.rs
src/plots/: cartesian.rs  case.rs  delta_cyl.rs  plot.rs  polar.rs  vertex.rs
src/refs/: query.rs
src/routes/: add.rs  app.rs  auth_code.rs  bounce.rs  error.rs  gateway.rs  instructions.rs  landing.rs  list.rs  login.rs  mod.rs  new.rs  protected.rs  register.rs  report.rs  repro.rs  sign_in.rs  sign_up.rs  terms.rs  trash.rs
src/tests/: mail.rs  plots.rs
src/tests/common/: mod.rs
style/: main.css  palettes.css
test/: delete_surgeon.gel  test.csv
