[package]
edition = "2024"
name = "audit"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.4", optional = true }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"], optional = true }
axum-macros = { version = "0.5.0", optional = true }
base64ct = { version = "1.8.0", features = ["alloc"], optional = true }
# todo: switch to jiff
chrono = { version = "0.4.41", features = ["serde"] }
console_error_panic_hook = "0.1.7"
dotenvy = "0.15.7"
garde = { version = "0.22.0", features = ["derive", "email"] }
gel-derive = { version = "0.7.4", optional = true }
gel-protocol = { version = "0.9.2", features = ["chrono"], optional = true }
gel-tokio = { version = "0.11.0", optional = true }
http = "1.3.1"
leptos = { version = "0.8.2", features = ["nightly"] }
leptos_axum = { version = "0.8.2", optional = true }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2", features = ["nightly"] }
plotly = { version = "0.12.1", features = ["kaleido", "kaleido_download"], optional = true }
rand = { version = "0.9.1", optional = true }
reactive_stores = "0.2.2"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = { version = "0.10.9", default-features = false, optional = true }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"], optional = true }
tower = { version = "0.5.2", features = ["util"], optional = true }
tower-http = { version = "0.6.6", features = ["fs"], optional = true }
tracing = { version = "0.1.41", optional = true }
uuid = { version = "1.17.0", features = ["serde"] }
wasm-bindgen = "=0.2.100"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:axum-extra",
  "dep:axum-macros",
  "dep:base64ct",
  "dep:gel-derive",
  "dep:gel-protocol",
  "dep:gel-tokio",
  "dep:leptos_axum",
  "dep:plotly",
  "dep:rand",
  "dep:sha2",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:tracing",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"

[package.metadata.leptos]
# todo: this is temporary due to https://github.com/leptos-rs/cargo-leptos/pull/359, and is fixed with upcoming cargo leptos 0.2.26
bin-target-triple = "aarch64-apple-darwin"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "audit"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
