[workspace]
members = ["audit", "audit_macro"]
resolver = "3"

[workspace.dependencies]
audit_macro = { path = "./audit_macro", version = "0.1.0" }
axum = { version = "0.8.7" }
axum-extra = { version = "0.12.2", features = ["cookie", "typed-header"] }
axum-macros = { version = "0.5.0" }
base64ct = { version = "1.8.0", features = ["alloc"] }
quote = "1.0.42"
syn = "2.0.111"
# TODO: switch to jiff https://github.com/BurntSushi/jiff
chrono = { version = "0.4.42", features = ["serde"] }
console_error_panic_hook = "0.1.7"
dotenvy = "0.15.7"
futures = "0.3.31"
garde = { version = "0.22.1", features = ["derive", "email"] }
gel-derive = { version = "0.7.4" }
gel-protocol = { version = "0.9.2", features = ["chrono"] }
gel-tokio = { version = "0.11.0" }
http = "1.4.0"
leptos = { version = "0.8.14", features = ["nightly"] }
leptos_axum = { version = "0.8.7" }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.10", features = ["nightly"] }
mailgun-rs = { version = "2.0.1" }
# TODO: switch to pulldown-cmark https://github.com/pulldown-cmark/pulldown-cmark/
markdown = "1.0.0"
proc-macro2 = "1.0.103"
# TODO: waiting on release
plotly = { git = "https://github.com/plotly/plotly.rs", features = ["static_export_default"] }
rand = { version = "0.9.2" }
reactive_stores = "0.3.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = { version = "0.10.9", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.7", features = ["fs"] }
tracing = { version = "0.1.43" }
uuid = { version = "1.19.0", features = ["serde"] }
wasm-bindgen = "0.2.106"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"
