[package]
edition = "2024"
name = "audit"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
audit_macro = { workspace = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
base64ct = { workspace = true, optional = true }
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
dotenvy = { workspace = true, optional = true }
futures = { workspace = true }
garde = { workspace = true }
gel-derive = { workspace = true, optional = true }
gel-protocol = { workspace = true, optional = true }
gel-tokio = { workspace = true, optional = true }
http = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
mailgun-rs = { workspace = true, optional = true }
markdown = { workspace = true }
plotly = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reactive_stores = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:axum-extra",
  "dep:axum-macros",
  "dep:base64ct",
  "dep:dotenvy",
  "dep:gel-derive",
  "dep:gel-protocol",
  "dep:gel-tokio",
  "dep:leptos_axum",
  "dep:mailgun-rs",
  "dep:plotly",
  "dep:rand",
  "dep:sha2",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:tracing",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "audit"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
